--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat :- by Sanjeet</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7733342387004681"
-     crossorigin="anonymous"></script>
+    <meta name="google-site-verification" content="cV-t7MT7csZ5e8RI1xCoWZIBYSpu9t9evrjFU9KFqW0" />
   </head>
   <body>
     <div id="root"></div>
