--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="A real-time chat application. Join chat rooms, send and receive messages instantly.">
+    <meta name="keywords" content="chat app, live chat, real-time messaging, socket.io, chat rooms, sanjeet chat room">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat :- by Sanjeet</title>
