--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="A real-time chat application. Join chat rooms, send and receive messages instantly.">
     <meta name="keywords" content="chat app, live chat, real-time messaging, socket.io, chat rooms, sanjeet chat room">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/public/hero.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat :- by Sanjeet</title>
     <meta name="google-site-verification" content="cV-t7MT7csZ5e8RI1xCoWZIBYSpu9t9evrjFU9KFqW0" />
