--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="A real-time chat application. Join chat rooms, send and receive messages instantly.">
-    <meta name="keywords" content="chat app, live chat, real-time messaging, socket.io, chat rooms, sanjeet chat room">
+    <meta name="keywords" content="chat app, live chat, real-time messaging, socket.io, chat rooms, sanjeet chat room, snajeet kumar , project , chat room idea , template">
     <link rel="icon" type="image/png" href="/public/hero.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat :- by Sanjeet</title>
+    <meta name="google-site-verification" content="cV-t7MT7csZ5e8RI1xCoWZIBYSpu9t9evrjFU9KFqW0" />
+    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7733342387004681"
      crossorigin="anonymous"></script>
-    <meta name="google-site-verification" content="cV-t7MT7csZ5e8RI1xCoWZIBYSpu9t9evrjFU9KFqW0" />
+<!-- Test -->
   </head>
   <body>
     <div id="root"></div>
